<resources>
    <string name="app_name">카페로그</string>
    <string name="shared_prefs_name">cafelog</string>
    <string name="start_without_login">로그인없이 시작하기</string>
    <string name="company">YRLEE SOFT</string>
    <string name="visit_certify">방문인증</string>
    <string name="create_review">리뷰작성</string>
    <string name="search_cafe">카페 검색하기</string>
    <string name="home">홈</string>
    <string name="mypage">마이페이지</string>
    <string name="favorite">찜</string>
    <string name="review">리뷰</string>
    <string name="map">지도</string>
    <string name="coffee_shop">커피전문점</string>
    <string name="dessert_cafe">디저트카페</string>
    <string name="cartoon_cafe">만화카페</string>
    <string name="board_cafe">보드카페</string>
    <string name="study_cafe">스터디카페</string>
    <string name="kids_cafe">키즈카페</string>
    <string name="live_cafe">라이브카페</string>
    <string name="galley_cafe">갤러리카페</string>
    <string name="fruits_shop">생과일전문점</string>
    <string name="meeting_space">모임공간</string>
    <string name="dessert">디저트</string>
    <string name="dogs_cafe">애견카페</string>
    <string name="cats_cafe">고양이카페</string>
    <string name="book_cafe">북카페</string>
    <string name="search_review">리뷰 검색하기</string>
    <string name="review_rating">리뷰 점수</string>
    <string name="my_favorite_list">나의 찜 목록</string>
    <string name="distance_sort">거리순</string>
    <string name="message_search_review">카페 이름, 지역 또는 원하는 스타일을 검색해보세요.</string>
    <string name="logout">로그아웃</string>
    <string name="dark_mode">다크모드</string>
    <string name="setting">설정</string>
    <string name="my_cafe_log">나의 카페로그</string>
    <string name="my_visit_cafe">내가 방문한 카페</string>
    <string name="my">MY</string>
    <string name="comments">Comments</string>
    <string name="search_cafe_for_certify">방문인증할 카페 검색</string>
    <string name="location_certify">위치인증</string>
    <string name="certify_my_location">내 위치 인증</string>
    <string name="certify_my_location_completed">내 위치 인증 완료</string>
    <string name="message_certify_my_location">내 위치 인증을 해주세요.</string>
    <string name="message_certify_visit_image">카페 방문 사진을 선택해주세요.</string>
    <string name="certify_image">음식/실내외 사진 인증 0/1</string>
    <string name="certify_image_completed">음식/실내외 사진 인증 1/1</string>
    <string name="certify">인증하기</string>
    <string name="selected_cafe_for_review">리뷰작성할 카페 선택</string>
    <string name="add_image">사진 추가</string>
    <string name="select_hashtag">카페에 어울리는 해시태그를 골라주세요!</string>
    <string name="hint_review_content">분위기, 맛 등 솔직한 한마디를 남겨주세요!</string>
    <string name="message_how_this_cafe">이 카페는 어떠셨나요?</string>
    <string name="message_without_login">로그인하지 않으면 일부 기능이 제한됩니다.\n로그인 없이 시작하시겠습니까?</string>
    <string name="message_login_fail">로그인에 실패했어요. 다시 시도해주세요.</string>
    <string name="nickname">닉네임</string>
    <string name="start">시작하기</string>
    <string name="message_restricted_search_func">내 위치정보를 제공하지 않아 검색기능 사용이 제한됩니다.</string>
    <string name="cafe">카페</string>
    <string name="message_input_search_query">검색할 내용을 입력해주세요.</string>
    <string name="message_stop_visit_certify">방문인증을 그만두시겠습니까?</string>
    <string name="yes">확인</string>
    <string name="message_select_visit_image">다른 유저들과 공유되니 자랑하고 싶은 멋진 사진으로 골라주세요!</string>
    <string name="message_can_search_around_100m">내 위치 인증을 위해 100m 근방의 카페들만 검색할 수 있어요!</string>
    <string name="message_require_location_permission">위치 권한이 필요합니다.</string>
    <string name="message_search_cafe_for_certify">인증하려는 카페를 선택해주세요!</string>
    <string name="message_bringing_up_current_location">현재 위치를 불러오는 중입니다. 잠시만 기다려주세요.</string>
    <string name="message_success_visit_certify">방문 인증을 성공했어요!</string>
    <string name="select_cafe">카페 선택</string>
    <string name="message_can_select_in_visited_cafe">방문인증한 카페만 선택할 수 있어요!</string>
    <string name="message_can_add_photo_max_6">리뷰할 카페의 사진을 최대 6장 골라주세요!</string>
    <string name="submit">제출하기</string>
    <string name="message_bringing_up_visited_cafes">방문인증한 카페들을 불러오고 있어요! 잠시만 기다려주세요.</string>
    <string name="message_no_visited_cafe">방문인증한 카페가 없어요!</string>
    <string name="message_certify_visit_cafe_for_create_review">리뷰를 작성하려면 방문인증을 먼저 해주세요!</string>
    <string name="message_remove_photo">사진을 삭제하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="remove">삭제</string>
    <string name="message_select_cafe_for_review">리뷰할 카페를 선택해주세요</string>
    <string name="message_select_hashtags">해시태그를 선택해주세요!</string>
    <string name="message_success_create_review">리뷰를 작성했어요!</string>
    <string name="message_give_score">카페 점수를 매겨주세요!</string>
    <string name="message_stop_create_review">리뷰 작성을 그만두시겠습니까?</string>
    <string name="message_no_cafe">아직 이 해시태그에 해당하는 카페가 없어요.\n리뷰를 남겨 다른 사용자에게 도움이 되어주세요!</string>
    <string name="seoul">서울</string>
    <string name="unmanned_cafe">무인카페</string>
</resources>