<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.review.ReviewAddActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_color">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null"
            app:navigationIconTint="@color/hint_color"
            app:navigationIcon="@drawable/ic_close">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_review"
                android:textColor="@color/gray"
                android:textSize="20sp"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_select_cafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_cafe"
                    android:textSize="12sp"
                    android:textColor="@color/light_color"
                    app:backgroundTint="@color/btn_bg_selected"
                    app:icon="@drawable/ic_select"
                    app:iconPadding="4dp"
                    app:iconGravity="textStart"
                    app:iconTint="@color/light_color"
                    style="@style/Widget.AppCompat.Button"/>

                <TextView
                    android:id="@+id/tv_cafe_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text=""
                    android:lines="2"
                    android:textSize="14sp"
                    android:textColor="@color/hint_color"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_can_select_in_visited_cafe"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/secondary"
                tools:ignore="SmallSp"
                android:layout_marginStart="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_marginVertical="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_hashtag"
                android:textSize="13sp"
                android:textColor="@color/primary"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_home_hashtag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                android:orientation="vertical"
                android:layout_marginTop="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_marginVertical="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_image"
                    android:textSize="12sp"
                    android:textColor="@color/light_color"
                    app:backgroundTint="@color/btn_bg_selected"
                    app:icon="@drawable/ic_add_image"
                    app:iconPadding="4dp"
                    app:iconGravity="textStart"
                    app:iconTint="@color/light_color"
                    style="@style/Widget.AppCompat.Button"/>

                <TextView
                    android:id="@+id/tv_photo_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="0/6"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/hint_color"
                    tools:ignore="SmallSp"
                    android:layout_marginStart="8dp"
                    android:gravity="end"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_can_add_photo_max_6"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/secondary"
                tools:ignore="SmallSp"
                android:layout_marginStart="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_review_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_marginVertical="16dp"/>


            <TextView
                android:id="@+id/tv_how_this_cafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_how_this_cafe"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/secondary"
                android:layout_marginStart="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/rating_bar"
                    android:layout_width="160dp"
                    android:layout_height="36dp"
                    app:mrb_fillBackgroundStars="true"
                    app:mrb_progressTint="@color/mocha"/>

                <TextView
                    android:id="@+id/tv_select_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_give_score"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:textColor="@color/secondary"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/edt_review_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_edt"
                android:hint="@string/hint_review_content"
                android:textColorHint="@color/hint_color"
                android:inputType="textMultiLine"
                android:text=""
                android:textSize="14sp"
                android:padding="16dp"
                android:gravity="top"
                android:lines="5"
                android:textColor="@color/gray"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="300dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textColor="@color/light_color"
        android:textStyle="bold"
        app:backgroundTint="@color/btn_bg_selected"
        style="@style/Widget.AppCompat.Button"
        android:layout_margin="8dp"
        android:layout_gravity="bottom"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:indeterminateTint="@color/mocha"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>